--- a/robii.html
+++ b/robii.html
@@ -1,24 +1,15 @@
- <html>
-<head>
-   <title> happy birthday robi </title>
-</head>
-<body>
-   <script type="text/javascript">
-       alert("happy birthday robi ✨💙");  
-   </script>
-</body
-bgcolor="black"
-
-
-
->
-</html>
  <!DOCTYPE html>
 <html>
 <head>
    <title> happy birthday  </title>
 </head>
 <body>
+ 
+ <style>
+  bgcolor="black";
+  
+ </style>
+  <title> happy birthday robi </title>
    <img src="https://i.ibb.co/sbRhF5s/img1.jpg" style="max-width: 100%; height: auto;" id="sample" class="1" />
    <br />
    <button onclick="changeImage();"> Change Image </button>
@@ -28,6 +19,10 @@ bgcolor="black"
          document.getElementById("sample").src = " https://i.ibb.co/M5ZpcB7/img2.jpg";
 
       }
+    
+   </script>
+  <script type="text/javascript">
+       alert("happy birthday robi ✨💙");  
    </script>
 </body>
 </html>
